--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.esm.js",
-  "type": "module",
   "types": "./lib/index.d.ts",
   "author": "Maksym Levytskyi https://github.com/gmaxlev",
   "license": "MIT",
@@ -14,8 +13,9 @@
     "dev": "nodemon --watch './**/*.ts' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/index.ts",
     "build:dts": "tsc --declaration --emitDeclarationOnly -p . --outDir dts",
     "build": "rm -rf lib && rm -rf dts && npm run build:dts && rollup -c rollup.config.cjs --bundleConfigAsCjs && rm -rf dts",
-    "lint": "eslint .",
-    "prettier": "prettier --check ."
+    "lint": "eslint 'src/**/*.ts'",
+    "prettier": "prettier --check .",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{ts,js}": [
@@ -35,8 +35,6 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
-    "@types/temp": "^0.9.1",
-    "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "babel-jest": "^29.5.0",
     "cross-env": "^7.0.3",
