--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "dist",
     "lib": ["es2020"],
     "module": "es2020",
-    "target": "es2020",
+    "target": "ES5",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
